--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
         <img src="img/5847f981cef1014c0b5e48be.png.opdownload">
         <h1>Blog Curso Git</h1>
     </div>
+
+    <div>
+        Contenido del blog ira aqui
+    </div>
 </body>
 </html>
