--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <title>Curso Git</title>
 </head>
 <body>
-    <div>
-        <img src="img/5847f981cef1014c0b5e48be.png.opdownload">
+    <div class="bar">
+        <img class="logo" src="img/git.png">
         <h1>Blog Curso Git</h1>
     </div>
-
     <div>
         Contenido del blog ira aqui
     </div>
