--- a/Project/User/login.html
+++ b/Project/User/login.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"> -->
 
     <!-- STYLE CSS -->
-    <link rel="stylesheet" href="../styles/styleLogin.css">
+    <link rel="stylesheet" href="../styles/styleLoginR.css">
 
 </head>
 <body>
